3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Try to factor esrv_del_item and esrv_send_item into remove_ob() and
insert_ob_in_ob(). Fix calls to esrv_send_item that are really esrv_update_item().
 common/object.c treasure.c
 include/newclient.h
 random_maps/standalone.c
 server/apply.c attack.c c_object.c c_wiz.c gods.c player.c plugins.c skills.c shop.c spell_effect.c time.c
 socket/item.c
 test/unit/common/stubs_common.c
 types/armour_improver/armour_improver.c
 types/lamp/lamp.c
 types/lighter/lighter.c
Nicolas Weeger 2007-07-05

Remove crossedit-related documentation, replace with Gridarta.
Removed:
 doc/Crossedit.doc crossedit.man
Modified:
 doc/Makefile.am
 doc/Developers/objects mapguide random-maps testplans
Nicolas Weeger 2007-07-05

server/c_range.c: don't lose golem if only consulting the spell list.
Nicolas Weeger 2007-07-05

Hopefully fix invalid player count on map. Now handled by remove_ob() and
insert_ob_in_map() directly. Also handled by leave() as the player leaves badly
the game in this case. Remove now unused leave_map() function.
 common/object.c
 include/map.h sproto.h
 server/apply.c login.c player.c server.c
Nicolas Weeger 2007-07-04

Fix bug #1735283: shining amulet of repulsion behaves strangely.
 common/object.c: remove stacking logic for blockview items, obsolete with map_layer.
Nicolas Weeger 2007-07-02

lib/help/skills, lib/Makefile.am: Add help for skills command.
Andreas Kirschbaum 2007-07-02

Documentation, no functional changes.
 include/timers.h
 server/timers.c
Nicolas Weeger 2007-07-01

Change behavior of shop mats: do not fail if the destination shop mat is